--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Created by .ignore support plugin (hsz.mobi)
-.idea/*
-.idea/workspace.xml
+.idea\*
+.idea\workspace.xml
 .idea
-/.idea/*
-/.idea/workspace.xml
-/.idea
+\.idea\*
+\.idea\workspace.xml
+\.idea
+*.xml
+.idea/workspace.xml
+.idea/workspace.xml
+.idea/workspace.xml
+.idea/workspace.xml
