--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 .vs/xml/v15/.suo
 .vs/ProjectSettings.json
 .vs/slnx.sqlite
+together/.vs/ProjectSettings.json
+together/.vs/slnx.sqlite
+together/.vs/together/v15/.suo
+together/.vs/VSWorkspaceState.json
